@@ -1,15 +1,6 @@
 /**
- * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
- *
- * This library is free software; you can redistribute it and/or modify it under
- * the terms of the GNU Lesser General Public License as published by the Free
- * Software Foundation; either version 2.1 of the License, or (at your option)
- * any later version.
- *
- * This library is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
- * details.
+ * SPDX-FileCopyrightText: (c) 2000 Liferay, Inc. https://liferay.com
+ * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
  */
 
 package com.liferay.dispatch.talend.web.internal.process;
@@ -22,6 +13,7 @@ import com.liferay.petra.string.StringBundler;
 import com.liferay.petra.string.StringPool;
 import com.liferay.petra.string.StringUtil;
 import com.liferay.portal.kernel.util.AggregateClassLoader;
+import com.liferay.portal.kernel.util.JavaDetector;
 import com.liferay.portal.util.PortalClassPathUtil;
 
 import java.io.File;
@@ -58,8 +50,8 @@ public class TalendProcess {
 	@Override
 	public String toString() {
 		return StringBundler.concat(
-			"{mainMethodArguments=", _mainMethodArguments.toString(),
-			", processConfig=", _processConfig.toString(), "}");
+			"{mainMethodArguments=", _mainMethodArguments, ", processConfig=",
+			_processConfig, "}");
 	}
 
 	public static class Builder {
@@ -118,29 +110,37 @@ public class TalendProcess {
 			ProcessConfig.Builder processConfigBuilder =
 				new ProcessConfig.Builder();
 
+			List<String> arguments = new ArrayList<>();
+
 			if (_jvmOptions != null) {
-				processConfigBuilder.setArguments(_jvmOptions);
+				arguments.addAll(_jvmOptions);
+			}
+
+			if (JavaDetector.isJDK21()) {
+				arguments.add("-Djava.security.manager=allow");
 			}
 
 			ProcessConfig portalProcessConfig =
 				PortalClassPathUtil.getPortalProcessConfig();
 
-			processConfigBuilder.setBootstrapClassPath(
+			return processConfigBuilder.setArguments(
+				arguments
+			).setBootstrapClassPath(
 				_getBootstrapClassPath(
-					portalProcessConfig.getBootstrapClassPathHolders()));
-			processConfigBuilder.setProcessLogConsumer(
-				portalProcessConfig.getProcessLogConsumer());
-			processConfigBuilder.setReactClassLoader(
+					portalProcessConfig.getBootstrapClassPathHolders())
+			).setJavaExecutable(
+				System.getProperty("java.home") + "/bin/java"
+			).setProcessLogConsumer(
+				portalProcessConfig.getProcessLogConsumer()
+			).setReactClassLoader(
 				AggregateClassLoader.getAggregateClassLoader(
 					portalProcessConfig.getReactClassLoader(),
-					TalendProcess.class.getClassLoader()));
-
-			processConfigBuilder.setRuntimeClassPath(
+					TalendProcess.class.getClassLoader())
+			).setRuntimeClassPath(
 				StringBundler.concat(
 					_talendArchive.getClassPath(), File.pathSeparator,
-					_BUNDLE_FILE_PATH));
-
-			return processConfigBuilder.build();
+					_BUNDLE_FILE_PATH)
+			).build();
 		}
 
 		private String _getBootstrapClassPath(PathHolder[] pathHolders) {
