@@ -1,19 +1,12 @@
 /**
- * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
- *
- * This library is free software; you can redistribute it and/or modify it under
- * the terms of the GNU Lesser General Public License as published by the Free
- * Software Foundation; either version 2.1 of the License, or (at your option)
- * any later version.
- *
- * This library is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
- * details.
+ * SPDX-FileCopyrightText: (c) 2000 Liferay, Inc. https://liferay.com
+ * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
  */
 
 package com.liferay.portal.kernel.test.rule;
 
+import com.liferay.petra.lang.SafeCloseable;
+import com.liferay.petra.lang.ThreadContextClassLoaderUtil;
 import com.liferay.petra.process.ClassPathUtil;
 import com.liferay.petra.process.ProcessCallable;
 import com.liferay.petra.process.ProcessChannel;
@@ -89,6 +82,8 @@ public class NewEnvTestRule implements TestRule {
 
 		builder.setArguments(createArguments(description));
 		builder.setBootstrapClassPath(CLASS_PATH);
+		builder.setJavaExecutable(
+			System.getProperty("java.home") + "/bin/java");
 		builder.setRuntimeClassPath(CLASS_PATH);
 
 		setEnvironment(builder, description);
@@ -151,6 +146,16 @@ public class NewEnvTestRule implements TestRule {
 	protected List<String> createArguments(Description description) {
 		List<String> arguments = new ArrayList<>();
 
+		RuntimeMXBean runtimeMXBean = ManagementFactory.getRuntimeMXBean();
+
+		for (String jvmArg : runtimeMXBean.getInputArguments()) {
+			if (jvmArg.startsWith("--add-opens") ||
+				jvmArg.contains("java.locale.providers")) {
+
+				arguments.add(jvmArg);
+			}
+		}
+
 		Class<?> testClass = description.getTestClass();
 
 		NewEnv.JVMArgsLine jvmArgsLine = testClass.getAnnotation(
@@ -173,6 +178,7 @@ public class NewEnvTestRule implements TestRule {
 			arguments.add("-Djvm.debug=true");
 		}
 
+		arguments.add("-Dnet.bytebuddy.experimental=true");
 		arguments.add("-Dsun.zip.disableMemoryMapping=true");
 
 		String whipAgentLine = System.getProperty("whip.agent");
@@ -201,8 +207,11 @@ public class NewEnvTestRule implements TestRule {
 
 	protected ClassLoader createClassLoader(Description description) {
 		try {
+			ClassLoader systemClassLoader = ClassLoader.getSystemClassLoader();
+
 			return new URLClassLoader(
-				ClassPathUtil.getClassPathURLs(CLASS_PATH), null);
+				ClassPathUtil.getClassPathURLs(CLASS_PATH),
+				systemClassLoader.getParent());
 		}
 		catch (MalformedURLException malformedURLException) {
 			throw new RuntimeException(malformedURLException);
@@ -229,17 +238,19 @@ public class NewEnvTestRule implements TestRule {
 		for (String variable : variables) {
 			String resolvedVariable = resolveSystemProperty(variable);
 
-			String[] parts = StringUtil.split(resolvedVariable, CharPool.EQUAL);
+			int index = resolvedVariable.indexOf(CharPool.EQUAL);
 
-			if (parts.length != 2) {
+			if (index == -1) {
 				throw new IllegalArgumentException(
 					StringBundler.concat(
 						"Wrong environment variable ", variable,
 						" resolved as ", resolvedVariable,
-						". Need to be \"key=value\" format"));
+						". Need to contain \"=\""));
 			}
 
-			environmentMap.put(parts[0], parts[1]);
+			environmentMap.put(
+				resolvedVariable.substring(0, index),
+				resolvedVariable.substring(index + 1));
 		}
 
 		return environmentMap;
@@ -443,20 +454,15 @@ public class NewEnvTestRule implements TestRule {
 		public void evaluate() throws Throwable {
 			MethodKey.resetCache();
 
-			Thread currentThread = Thread.currentThread();
-
-			ClassLoader contextClassLoader =
-				currentThread.getContextClassLoader();
-
-			currentThread.setContextClassLoader(_newClassLoader);
-
 			String quiet = System.getProperty(
 				SystemProperties.SYSTEM_PROPERTIES_QUIET);
 
 			System.setProperty(
 				SystemProperties.SYSTEM_PROPERTIES_QUIET, StringPool.TRUE);
 
-			try {
+			try (SafeCloseable safeCloseable =
+					ThreadContextClassLoaderUtil.swap(_newClassLoader)) {
+
 				Class<?> clazz = _newClassLoader.loadClass(_testClassName);
 
 				Object object = clazz.newInstance();
@@ -483,8 +489,6 @@ public class NewEnvTestRule implements TestRule {
 					System.setProperty(
 						SystemProperties.SYSTEM_PROPERTIES_QUIET, quiet);
 				}
-
-				currentThread.setContextClassLoader(contextClassLoader);
 
 				MethodKey.resetCache();
 			}
